--- a/index.html
+++ b/index.html
@@ -1,35 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <title>The Psychic Game</title>
-<body>
-  <div class="wrapper">
-    <div class="col-md-3">
-    </div>
-      <div class="col-md-6 text-center">
-        <header>
+  <head>
+    <meta charset="UTF-8">
+    <title>The Psychic Game</title>
+    <body>
+      <header>
         <h1>The Psychic Game</h1>
-        </header>
-        <div class="instructions">
-          <h3>Guess what letter I'm thinking of</h3>
-        </div>
-    <!--Empty Div for the tallies-->
-        <div id="game">
-          <ul class="list-group">
-            <li class="list-group-item"><p id="wins">Wins: </p></li>
-            <li class="list-group-item"><p id="losses">Losses: </p></li>
-            <li class="list-group-item"><p id="guessLeft">Guesses Left: </p></li>
-            <li class="list-group-item"><p id="let">Your Guesses so far: </p></li>
-          </ul>  
-        </div>
-        <div class="col-md-3">   
-        </div>
-      </div>
-  </div> 
+      </header>
 
-    <script type="text/javascript" src="assets/javascript/game.js"></script>
+        <h3>Guess what letter I'm thinking of</h3>
+
+    
+        <ul class="lists">
+          <li class="listItem"><p id="wins">Wins: </p></li>
+          <li class="listItem"><p id="losses">Losses: </p></li>
+          <li class="listItem"><p id="guessLeft">Guesses Left: </p></li>
+          <li class="listItem"><p id="let">Your Guesses so far: </p></li>
+        </ul>
+
+  <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
-
 </html>
